kustomize/overlays/production/frontend-1-10-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
      - name: todolist
        image: ghcr.io/bennyro-mta/todolist:1.10
