kustomize/overlays/production/todolist-vue-image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-vue
spec:
  template:
    spec:
      volumes:
        - name: title-image-vol
          configMap:
            name: todolist-vue-image
      containers:
        - name: todolist-vue
          volumeMounts:
            - name: title-image-vol
              mountPath: /opt/images
              readOnly: true
