kustomize/overlays/production/todos-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-api
  template:
    metadata:
      labels:
        app: todos-api
    spec:
      containers:
      - name: todos-api
        image: ghcr.io/bennyro-mta/todos-api:1.2
        ports:
        - containerPort: 8080
