kustomize/overlays/production/todolist-vue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todolist-vue-service
  labels:
    app: todolist-vue
spec:
  selector:
    app: todolist-vue
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
