kustomize/overlays/production/todolist-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todolist-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: todolist.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todolist-vue-service
                port:
                  number: 8080
          - path: /webui
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5000
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todos-api-service
                port:
                  number: 8080
